Finalización del contenido de la página web

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,6 @@
 @use 'variables' as *;
 
-// PIE / FOOTER  *************************************
+// SECCIÓN PIE / FOOTER  *************************************
 .pie {
   position: relative;
   background-color: $color-alter2;
