--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -5,3 +5,4 @@
 @forward '../components/inicio';
 @forward '../components/footer';
 @forward '../components/productos';
+@forward '../components/detalles';
