Agregados detalles finales al diseño web

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1391,6 +1391,8 @@ header.sticky {
   color: #7713bf;
   opacity: 0.2;
   writing-mode: sideways-lr;
+  -webkit-writing-mode: sideways-lr;
+  -ms-writing-mode: sideways-lr;
 }
 
 .misi__p2 {
@@ -1416,6 +1418,8 @@ header.sticky {
   color: #7713bf;
   opacity: 0.2;
   writing-mode: sideways-lr;
+  -webkit-writing-mode: sideways-lr;
+  -ms-writing-mode: sideways-lr;
 }
 
 .misi__contrect {
